--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <hr>
     <h3>
     <p>
-      <p><a href="./public/movie-ranking.html">Movie Ranking Project</a> </p>
-      <p><img height="200" src="./assets/images/movie_ranking_image.png" alt="Movie Ranking image"></p>
+      <p><a href="movie-ranking.html">Movie Ranking Project</a> </p>
+      <p><img height="200" src="movie_ranking_image.png" alt="Movie Ranking image"></p>
     </p>
     <p>
-    <p><a href="./public/birthday-invite.html">Birthday Invitation Project</a> </p>
-    <p><img height="200" src="./assets/images/birthday-invite-image.png" alt="Birthday Invitation image"></p>
+    <p><a href="birthday-invite.html">Birthday Invitation Project</a> </p>
+    <p><img height="200" src="birthday-invite-image.png" alt="Birthday Invitation image"></p>
     </p>
    </h3>
     <hr>
-    <a href="./public/about.html">About Me</a>
-    <a href="./public/contact.html">Contact Me</a>
+    <a href="about.html">About Me</a>
+    <a href="contact.html">Contact Me</a>
  </body>
  </html>
